examples/invalid_scl/odd_even_non_stratified.scl
rel num = {(0), (1), (2), (3), (4), (5)}

rel even(0)
rel odd(x + 1) = even(x)
rel even(x) = num(x), ~odd(x)
